--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,9 @@
 fastapi==0.115.6
 uvicorn==0.34.0   
-
+scikit-learn==1.6.0
+tqdm==4.67.1
+pytz==2024.2
+accelerate==1.2.1
+bitsandbytes==0.45.0
+transformers==4.47.1
+sentence-transformers==3.3.1
