--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,6 @@ accelerate==1.2.1
 bitsandbytes==0.45.0
 transformers==4.47.1
 sentence-transformers==3.3.1
+recbole==1.2.0
+huggingface_hub==0.27.1
+kmeans-pytorch==0.3
