--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,4 +23,7 @@ build-backend = "poetry.core.masonry.api"
 black = "^24.10.0"
 pre-commit = "^4.1.0"
 pytest = "^8.3.4"
+isort = "^5.13.2"
 
+[tool.isort]
+profile = "black"
