--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,11 @@ requires-python = ">=3.10.0"
 dependencies = [
     "streamlit (>=1.41.1,<2.0.0)",
     "torch (>=2.5.1,<3.0.0)",
-    "pyparsing (>=3.2.1,<4.0.0)"
+    "pyparsing (>=3.2.1,<4.0.0)",
+    "recwizard @ file:///C:/Users/USER/Desktop/24_winter/RecSys_and_LLM/recsys_and_llm/ml/recwizard",
+    "ipykernel (>=6.29.5,<7.0.0)",
+    "numpy (==1.26.4)",
+    "chardet (>=5.2.0,<6.0.0)"
 ]
 
 
@@ -24,6 +28,7 @@ black = "^24.10.0"
 pre-commit = "^4.1.0"
 pytest = "^8.3.4"
 isort = "^5.13.2"
+asttokens = "^3.0.0"
 
 [tool.isort]
 profile = "black"
