--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "recwizard @ file:///C:/Users/USER/Desktop/24_winter/RecSys_and_LLM/recsys_and_llm/ml/recwizard",
     "ipykernel (>=6.29.5,<7.0.0)",
     "numpy (==1.26.4)",
-    "chardet (>=5.2.0,<6.0.0)"
+    "chardet (>=5.2.0,<6.0.0)",
+    "python-dotenv (>=1.0.1,<2.0.0)"
 ]
 
 
