--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
 ]
 license = {text = "MIT"}
 readme = "README.md"
-requires-python = ">=3.10.0"
+requires-python = "<4.0, >=3.10.0"
 dependencies = [
     "streamlit (>=1.41.1,<2.0.0)",
     "torch (>=2.5.1,<3.0.0)",
@@ -16,7 +16,10 @@ dependencies = [
     "ipykernel (>=6.29.5,<7.0.0)",
     "numpy (==1.26.4)",
     "chardet (>=5.2.0,<6.0.0)",
-    "python-dotenv (>=1.0.1,<2.0.0)"
+    "python-dotenv (>=1.0.1,<2.0.0)",
+    "loguru (>=0.7.3,<0.8.0)",
+    "h5py (>=3.12.1,<4.0.0)",
+    "transformers (==4.33.2)",
 ]
 
 
