--- a/recsys_and_llm/ml/recwizard/pyproject.toml
+++ b/recsys_and_llm/ml/recwizard/pyproject.toml
@@ -34,17 +34,15 @@ classifiers = [
 ]
    
 dependencies = [
-    "transformers~=4.33.2",
-    "tokenizers~=0.13.3",
-    "datasets~=2.12.0",
-    "torch_geometric~=2.3.1",
-    "scikit_learn~=1.2.2",
-    "pandas~=2.0.0",
-    "pyarrow~=12.0.0",
-    "nltk~=3.8.1",
-    "openai==1.59.7",
-    "h5py",
-    "loguru"
+    "transformers>=4.33.2",
+    "tokenizers>=0.13.3",
+    "datasets>=2.12.0",
+    "torch_geometric>=2.3.1",
+    "scikit-learn>=1.2.2",
+    "pandas>=2.0.0",
+    "pyarrow>=12.0.0",
+    "nltk>=3.8.1",
+    "openai>=1.59.7"
 ]
 
 dynamic = ["version"]
