--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,17 @@ dependencies = [
     "loguru (>=0.7.3,<0.8.0)",
     "h5py (>=3.12.1,<4.0.0)",
     "transformers (==4.33.2)",
+    "pymongo (>=4.11,<5.0)",
+    "dnspython (>=2.7.0,<3.0.0)",
+    "argparse (>=1.4.0,<2.0.0)",
+    "tqdm (>=4.67.1,<5.0.0)",
+    "fastapi (>=0.115.8,<0.116.0)",
+    "uvicorn (>=0.34.0,<0.35.0)",
+    "accelerate (>=1.3.0,<2.0.0)",
+    "bitsandbytes (>=0.45.2,<0.46.0)",
+    "recbole (>=1.2.0,<2.0.0)",
+    "kmeans-pytorch (>=0.3,<0.4)",
+    "sentence-transformers (==2.6.1)",
 ]
 
 
