--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "recbole (>=1.2.0,<2.0.0)",
     "kmeans-pytorch (>=0.3,<0.4)",
     "sentence-transformers (==2.6.1)",
+    "streamlit-searchbox (>=0.1.20,<0.2.0)",
 ]
 
 
