--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,10 @@ dependencies = [
     "torch (>=2.5.1,<3.0.0)",
     "pyparsing (>=3.2.1,<4.0.0)",
     "ipykernel (>=6.29.5,<7.0.0)",
-    "numpy (==1.26.4)",
     "chardet (>=5.2.0,<6.0.0)",
     "python-dotenv (>=1.0.1,<2.0.0)",
     "loguru (>=0.7.3,<0.8.0)",
     "h5py (>=3.12.1,<4.0.0)",
-    "transformers (==4.33.2)",
     "pymongo (>=4.11,<5.0)",
     "dnspython (>=2.7.0,<3.0.0)",
     "argparse (>=1.4.0,<2.0.0)",
@@ -29,9 +27,12 @@ dependencies = [
     "bitsandbytes (>=0.45.2,<0.46.0)",
     "recbole (>=1.2.0,<2.0.0)",
     "kmeans-pytorch (>=0.3,<0.4)",
-    "sentence-transformers (==2.6.1)",
     "streamlit-searchbox (>=0.1.20,<0.2.0)",
     "st-star-rating (>=0.0.6,<0.0.7)",
+    "transformers (>=4.49.0,<5.0.0)",
+    "sentence-transformers (>=3.4.1,<4.0.0)",
+    "openai (>=1.63.2,<2.0.0)",
+    "numpy (>=2.2.3,<3.0.0)",
 ]
 
 
